Fix the horizontal scroll bug

--- a/clones/tesla/model-s/style.css
+++ b/clones/tesla/model-s/style.css
@@ -10,6 +10,7 @@
 body {
     height: 100%;
     color: #FFF;
+    overflow-x: hidden;
 
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -25,15 +26,10 @@ body::-webkit-scrollbar {
     justify-content: space-between;
     padding: 0px;
     backdrop-filter: blur(100px);
-    /* Black background color */
     position: fixed;
-    /* Make it stick/fixed */
     top: -150px;
-    /* Hide the navbar 50 px outside of the top view */
     width: 100%;
-    /* Full width */
     transition: top 0.3s;
-    /* Transition effect when sliding down (and up) */
     z-index: 4;
 }
 
@@ -49,7 +45,6 @@ body::-webkit-scrollbar {
     border-radius: 6px;
 }
 
-/* Style the navbar links */
 .scrollNavbar a {
     float: left;
     color: white;
